# rd_syncrr

./: .dockerignore  .env.minimal  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  RELATIONS_DB.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
rd_syncrr/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  scheduler.py  settings.py
rd_syncrr/services/: __init__.py
rd_syncrr/services/media_db/: base.py  dependencies.py  utils.py
rd_syncrr/services/media_db/dao/: __init__.py  media_dao.py
rd_syncrr/services/media_db/models/: __init__.py  media_model.py
rd_syncrr/services/security_db/: __init__.py  _sqlite_access.py
rd_syncrr/tasks/: __init__.py  arrinfo_api.py  data_process.py  infolink_process.py  jsonfile_process.py  mediainfo_process.py  symlink_process.py  sync_instance.py  torrents_action.py  torrents_process.py
rd_syncrr/tests/: __init__.py  test_rd_syncrr.py
rd_syncrr/utils/: __init__.py
rd_syncrr/utils/pyarr/: __init__.py  base.py  lidarr.py  radarr.py  readarr.py  request_handler.py  sonarr.py  types.py
rd_syncrr/utils/pyarr/models/: common.py  readarr.py
rd_syncrr/utils/rdapi/: __init__.py  error_codes.json  rdapi.py
rd_syncrr/utils/security/: __init__.py  security_api_key.py  security_secret.py
rd_syncrr/utils/syncrrapi/: __init__.py  rdsyncrrapi.py
rd_syncrr/web/: __init__.py  application.py  lifetime.py
rd_syncrr/web/api/: __init__.py  router.py
rd_syncrr/web/api/admin/: __init__.py  schemas.py  views.py
rd_syncrr/web/api/auth/: __init__.py  views.py
rd_syncrr/web/api/docs/: __init__.py
rd_syncrr/web/api/monitoring/: __init__.py
rd_syncrr/web/api/sync/: __init__.py  schema.py  views.py
